[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mygit"
version = "0.1.0"
description = "A minimal Git implementation in Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"
readme = "README.md"

[project.scripts]
mygit = "src.cli:main"